# space

./: .gitignore  CONVENTIONS.md  Makefile  README.md  conftest.py  hello.py  pyproject.toml  run_backend_dev.sh  run_backend_prod.sh  run_server.sh
.copilot/: settings.json
backend/: db_utils.py  main.py  models.py  planet_data.py
backend/tests/: test_planet_relations.py
frontend/: package-lock.json
frontend/src/: App.tsx
