# Project settings
[tool.project]
development_os = "macos"

# Note: This project is primarily developed on macOS. Default scripts and instructions should use Unix/macOS conventions unless Windows compatibility is explicitly required.
[project]
name = "space"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi==0.116.0",
    "uvicorn==0.35.0",
    "sqlmodel==0.0.8",
    "pytest==8.4.1",
    "skyfield==1.53",
    "rich==14.0.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.*deprecated.*:DeprecationWarning:sqlalchemy"
]
